FEA: Add new endpoint to list pokemon
